# dotlanth

./: .gitignore  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.docs  Dockerfile.prod  Jenkinsfile  README.md  SECURITY.md  basic_program.dotvm  bitbucket-pipelines.yml  clippy.toml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  justfile  no_constants.dotvm  rust-toolchain.toml  rustfmt.toml  simple_test.rs  test_basic.rs  test_contract.dot  test_no_constants.rs  test_program.dotvm  test_showcase.rs  test_simple.rs
crates/dotdb/cli/: Cargo.toml
crates/dotdb/cli/src/: main.rs
crates/dotdb/core/: Cargo.toml  build.rs
crates/dotdb/core/src/: lib.rs  write_batch.rs
crates/dotdb/core/src/compaction/: manager.rs  mod.rs  strategy.rs
crates/dotdb/core/src/document/: collection.rs  mod.rs  storage.rs
crates/dotdb/core/src/fs/: layout.rs  mod.rs
crates/dotdb/core/src/indices/: b_plus_tree.rs  composite_index.rs  hash_index.rs  lib.rs  mod.rs  persistence.rs
crates/dotdb/core/src/io/: direct_io.rs  mod.rs
crates/dotdb/core/src/memory/: allocator.rs  cache.rs  lib.rs  mmap.rs  mod.rs  pool.rs
crates/dotdb/core/src/query/: mod.rs
crates/dotdb/core/src/recovery/: checkpoint.rs  mod.rs
crates/dotdb/core/src/state/: contract_storage_layout.rs  db_interface.rs  diff.rs  dot_storage_layout.rs  mod.rs  pruning.rs  snapshot.rs  versioning.rs
crates/dotdb/core/src/statistics/: access_patterns.rs  cardinality.rs  collector.rs  histogram.rs  mod.rs
crates/dotdb/core/src/storage_engine/: buffer_manager.rs  deadlock_detector.rs  file_format.rs  isolation.rs  lib.rs  mod.rs  mvcc.rs  occ.rs  page_manager.rs  transaction.rs  wal.rs
crates/dotdb/core/tests/: showcase_test.rs
crates/dotlanth-api/: Cargo.toml  build.rs
crates/dotlanth-api/src/: auth.rs  compatibility_testing.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  middleware.rs  models.rs  rate_limiting.rs  router.rs  security.rs  server.rs  vm.rs  websocket.rs
crates/dotlanth-api/src/gateway/: bridge.rs  config.rs  error_mapping.rs  mod.rs  protocol_negotiation.rs  request_transformer.rs  response_transformer.rs  streaming_bridge.rs  transcoder.rs  websocket_grpc_bridge.rs
crates/dotlanth-api/src/graphql/: guards.rs  mod.rs  mutation.rs  query.rs  schema.rs  subscription.rs  types.rs
crates/dotlanth-api/src/handlers/: auth.rs  db.rs  dot_permissions.rs  health.rs  mod.rs  versioning.rs  vm.rs  websocket.rs
crates/dotlanth-api/src/rbac/: audit.rs  cache.rs  dot_permissions.rs  manager.rs  middleware.rs  mod.rs  permissions.rs  roles.rs  system.rs
crates/dotlanth-api/src/user_management/: audit.rs  export.rs  handlers.rs  manager.rs  mod.rs  models.rs  preferences.rs  search.rs  store.rs  tests.rs
crates/dotlanth-api/src/versioning/: compatibility.rs  deprecation.rs  mod.rs  negotiation.rs  schema.rs  version.rs
crates/dotlanth-cli/: Cargo.toml
crates/dotlanth-cli/src/: config.rs  database.rs  main.rs
crates/dotlanth-cli/src/commands/: backup.rs  cluster.rs  config.rs  deploy.rs  mod.rs  monitor.rs  nodes.rs
crates/dotlanth-cli/src/tui/: app.rs  events.rs  mod.rs  monitoring.rs  ui.rs
crates/dotlanth-cli/src/tui/components/: grpc_endpoints.rs  mod.rs
crates/dotvm/compiler/: Cargo.toml
crates/dotvm/compiler/src/: dependency_analysis.rs  lib.rs
crates/dotvm/compiler/src/codegen/: config.rs  dotvm_generator.rs  error.rs  generator.rs  mod.rs  optimizer.rs  writer.rs
crates/dotvm/compiler/src/dependency_analysis/: config.rs  engine.rs  mod.rs
crates/dotvm/compiler/src/extensions/: detector.rs  math_ops.rs  mod.rs  simd.rs  vector.rs
crates/dotvm/compiler/src/optimizer/: constant_folding.rs  dead_code.rs  mod.rs  peephole.rs
crates/dotvm/compiler/src/parser/: mod.rs  traits.rs
crates/dotvm/compiler/src/transpiler/: config.rs  engine.rs  engine_new.rs  error.rs  mod.rs  test_basic.rs
crates/dotvm/compiler/src/wasm/: PHASE4_SUMMARY.md  ast.rs  error.rs  features.rs  mapping.rs  mod.rs  opcode_mapper.rs  parser.rs  sections.rs  test_integration.rs  validation.rs
crates/dotvm/compiler/tests/: integration_tests.rs
crates/dotvm/core/: Cargo.toml
crates/dotvm/core/benches/: crypto_benchmarks.rs  database_performance_benchmarks.rs
crates/dotvm/core/examples/: database_opcodes_examples.rs
crates/dotvm/core/src/: bytecode.rs  lib.rs  state_transitions.rs
crates/dotvm/core/src/contracts/: dependencies.rs  error.rs  lib.rs  mod.rs  scheduling.rs  splitting.rs  validation.rs
crates/dotvm/core/src/dots/: dependencies.rs  error.rs  lib.rs  mod.rs  scheduling.rs  splitting.rs  validation.rs
crates/dotvm/core/src/instruction/: architecture_registry.rs  arithmetic.rs  bigint.rs  control_flow.rs  crypto.rs  crypto_impl.rs  crypto_provider.rs  factory.rs  instruction.rs  memory.rs  memory_ops.rs  mod.rs  registry.rs  system_call.rs
crates/dotvm/core/src/memory/: allocator.rs  error.rs  mod.rs  page_table.rs  pool.rs  protection.rs  shared_memory.rs
crates/dotvm/core/src/opcode/: architecture_opcodes.rs  arithmetic_opcodes.rs  bigint_opcodes.rs  control_flow_opcodes.rs  crypto_opcodes.rs  db_opcodes.rs  math_opcodes.rs  memory_opcodes.rs  mod.rs  parallel_opcodes.rs  simd_opcodes.rs  stack_opcodes.rs  state_opcodes.rs  (+2 more)
crates/dotvm/core/tests/: crypto_integration_test.rs  database_integration_test.rs  execution_integration_test.rs  lib.rs  multi_arch_tests.rs
crates/dotvm/runtime/: Cargo.toml  build.rs
crates/dotvm/runtime/examples/: async_host_functions_demo.rs
crates/dotvm/runtime/proto/: cluster_service.proto  common.proto  database_service.proto  runtime.proto  vm_service.proto
crates/dotvm/runtime/src/: config.rs  execution_context.rs  lib.rs  main.rs  transpiler_integration.rs
crates/dotvm/runtime/tests/: async_host_functions_integration.rs
crates/dotvm/tools/: Cargo.toml
crates/dotvm/tools/benches/: benchmarks.rs
crates/dotvm/tools/src/: lib.rs  main.rs
crates/tools/: Cargo.toml
crates/tools/benches/: benchmarks.rs
crates/tools/src/: main.rs
crates/tools/src/cli/: mod.rs
src/: main.rs
(+484 files in other folders)
