[workspace]
resolver = "2"

members = [
    "crates/common",
    "crates/compiler",
    "crates/core",
    "crates/runtime",
    "crates/tools",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Synerthink"]
repository = "https://github.com/synerthink-organization/dotVM"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = "0.3"
metrics = "0.21"

# Testing
criterion = "0.5"
mockall = "0.12"
proptest = "1.4"

# Development
clap = { version = "4.5", features = ["derive"] }
