[workspace]
resolver = "2"

members = [
    "crates/dotvm/common",
    "crates/dotvm/compiler",
    "crates/dotvm/core",
    "crates/dotvm/runtime",
    "crates/dotvm/tools",
    "crates/dotdb/common",
    "crates/dotdb/core",
    "crates/dotdb/cli",
    "crates/dotlanth-cli",
    "crates/dotlanth-api",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Synerthink"]
repository = "https://github.com/synerthink-organization/dotVM"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.36", features = ["full"] }
futures = "0.3.31"
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
serde_json = "1.0"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = "0.3"
metrics = "0.21"

# Testing
criterion = "0.5"
mockall = "0.12"
proptest = "1.4"

# Development
clap = { version = "4.5", features = ["derive"] }

# Database specific
rocksdb = "0.21"
blake3 = "1.5"
parking_lot = "0.12"

# VM specific
num-bigint = "0.4.6"
rand = "0.8"
rayon = "1.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev.package."*"]
opt-level = 2

[profile.bench]
lto = true
codegen-units = 1
