[package]
name = "dotlanth-api"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Core dependencies
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# HTTP server
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# gRPC client
tonic = { version = "0.11", features = ["tls"] }
prost = "0.12"

# JWT and auth
jsonwebtoken = "9.2"
ring = "0.17"
base64 = "0.22"

# URL routing
matchit = "0.8"

# UUID generation  
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP utilities
mime = "0.3"
percent-encoding = "2.3"

# OpenAPI
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

# Local crates
dotvm-core = { path = "../dotvm/core" }
dotvm-common = { path = "../dotvm/common" }
dotdb-core = { path = "../dotdb/core" }
dotdb-common = { path = "../dotdb/common" }

[build-dependencies]
tonic-build = "0.11"
