[package]
name = "dotlanth-api"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Core dependencies
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# HTTP server
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }

# WebSocket support
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
hyper-tungstenite = "0.13"
tokio-stream = "0.1"
sha1 = "0.10"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# gRPC client
tonic = { version = "0.11", features = ["tls"] }
prost = "0.12"

# JWT and auth
jsonwebtoken = "9.2"
ring = "0.17"
base64 = "0.22"
argon2 = "0.5"

# URL routing
matchit = "0.8"

# UUID generation  
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP utilities
mime = "0.3"
percent-encoding = "2.3"

# OpenAPI
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

# GraphQL
async-graphql = { version = "7", features = ["chrono", "uuid", "log"] }

# Concurrency and data structures
dashmap = "5.4"
parking_lot = "0.12"

# Metrics
metrics = "0.21"

# Local crates
dotvm-core = { path = "../dotvm/core" }
dotvm-common = { path = "../dotvm/common" }
dotdb-core = { path = "../dotdb/core" }
dotdb-common = { path = "../dotdb/common" }

# Additional dependencies for versioning
urlencoding = "2.1"

# Gateway bridge dependencies
url = "2.5"
regex = "1.10"

[build-dependencies]
tonic-build = "0.11"
