[package]
name = "dotlanth-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "dotlanth"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = "0.8"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = "0.24"
crossterm = "0.27"
