[package]
name = "dotdb-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "dotdb"
path = "src/main.rs"

[dependencies]
dotdb-core = { path = "../core" }
dotdb-common = { path = "../common" }
clap.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1.0", features = ["v4"] }