[package]
name = "dotvm-core"
version.workspace = true
edition.workspace = true

[dependencies]
dotvm-common = { path = "../common" }
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
metrics.workspace = true
num-bigint.workspace = true
parking_lot = "0.12.3"
rand = "0.8.5"
libc = "0.2.169"
raw-cpuid = "11.3.0"
cfg-if = "1.0.0"
sha2 = "=0.10.8"
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true

[dev-dependencies]
criterion.workspace = true
mockall.workspace = true
proptest.workspace = true
