[package]
name = "dotvm-core"
version.workspace = true
edition.workspace = true

[dependencies]
dotvm-common = { path = "../common" }
dotdb-core = { path = "../../dotdb/core" }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time"] }
futures.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
metrics.workspace = true
num-bigint.workspace = true
num-integer = "0.1.46"
num-traits = "0.2.19"
parking_lot = "0.12.3"
rand = "0.8.5"
libc = "0.2.169"
raw-cpuid = "11.3.0"
cfg-if = "1.0.0"
sha2 = "0.10.8"
blake3 = "1.5"
ring = "0.17"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
rand_core = { version = "0.6", features = ["std"] }
zeroize = "1.7"
plonky2 = "1.1.0"
petgraph = "0.7.1"
crossbeam-deque = "0.8.6"
num_cpus = "1.16.0"
sysinfo = "0.34.1"
tempfile = "3.19.1"
base64 = "0.22.1"
hex = "0.4.3"
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true

# ParaDot execution dependencies
dashmap = "5.5"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
criterion.workspace = true
mockall.workspace = true
proptest.workspace = true

[[bench]]
name = "database_performance_benchmarks"
harness = false

[[bench]]
name = "crypto_benchmarks"
harness = false
