[package]
name = "dotvm-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
dotdb-core = { path = "../../dotdb/core" }
dotvm-common = { path = "../common" }
dotvm-core = { path = "../core" }
dotvm-compiler = { path = "../compiler" }
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
tonic = "0.11"
prost = "0.12"
tonic-reflection = "0.11"
futures-timer = "3.0.3"
rand = "0.9.1"
ring = "0.17.14"
dashmap = "6.1.0"
base64 = "0.22.1"

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
tonic-build = "0.11"